Hotfix 34.3 remove obsolete Npgsql trust server certificate usage
